style: merged 'feature/maps' and 'SDAYK-20_UploadAvatar' branches into one monolyth
